style.css
:root {
  --color__revolver-light: #372448;
  --color__revolver: #271638;
  --color__white-lilac: #ECCCFE;
  --color__jaguar: #130220;
  --color__pink-lace: #FED0ED;
  --color__blackberry: #490342;
  --color__pompadour: #660066;
  --color__fringy-flower: #BAE5D1;
  --color__onahau: #D0EEFF;
  --color__purple-pizzazz: #FE0EE0;
  --color__pink: #FF14A4;
  --color__periwinkle: #C4CFFF;
  --color__purple-mountain-majesty: #9F77B4;
  --color__white: #FFFFFF;
  --color__orange: #FF5858;
  --color__grapfit-dark: #20232A;
  --color__grapfit-light: #282C34;
  --color__sand: #E5D1BA;
}
body {
  background: var(--color__grapfit-dark);
  margin: 0;
}
main {
  display: flex;
  min-height: 100vh;
  position: relative;
  
  article {
    width: 25%;
    height: 80vh;
    -webkit-box-shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.25);
    -moz-box-shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.25);
    box-shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.25);
    margin: 30px;

    display: flex;
    flex-direction: column;
    row-gap: 23px;
    padding: 18px;
    overflow: auto;
    border: 18px solid var(--color__grapfit-light);
    background: #20232A url('/bg-opacity.png') no-repeat right top / cover;

    /* .cube__wrapper {
      height: 100%;
      width: 100%;
      transition: 1.5s ease;
      transform-style: preserve-3d;
      transform: rotate3d(1, 1, 1, 0deg);

      .side-c,
      .side-l,
      .side-b,
      .side-r {
        position: absolute;
        width: calc(100% - 72px);
        height: calc(100% - 72px);

        display: flex;
        flex-direction: column;
        row-gap: 23px;
        padding: 18px;
        overflow: auto;
        border: 18px solid var(--color__grapfit-light);
        background: #20232A url('/bg-opacity.png') no-repeat right top / cover;
        backface-visibility: inherit;
      }
      .side-c {
        transform: translateZ(10vw);
      }
      .side-l {
        transform: rotateY(-90deg) translateZ(10vw);
      }
      .side-b {
        transform: rotateY(180deg) translateZ(10vw);
      }
      .side-r {
        transform: rotateY(90deg) translateZ(10vw);
      }
    } */

    details {
      box-shadow: 7px 7px 7px #00000040;
      cursor: pointer;
      border-radius: 3px;
      background-color: var(--color__sand);
      width: max-content;

      summary {
        display: block;
        
        span {
          padding: 6px 12px;
          color: var(--color__grapfit-dark);
          text-transform: lowercase;
          font-size: 18px;
          font-weight: 900;
          text-align: center;
        }
      }
    }
    
    details[open] {
      cursor: auto;
      background: none;
      padding: 0;
      color: white;
      position: absolute;
      top: 10%;
      left: 50%;
      transform: translate(-50%, 0);
      width: 60%;
      max-height: 600px;
      overflow: auto;
      border: 6px solid var(--color__white);
    
      summary {
        cursor: pointer;
        background-color: var(--color__sand);

        &::after {
          content: "X";
          display: block;
          width: 25px;
          height: 25px;
          background-color: var(--color__white);
          right: 6px;
          top: 6px;
          position: absolute;
          display: flex;
          align-items: center;
          justify-content: center;
          color: var(--color__revolver);
          border-radius: 3px;
        }

        span {
          /* display: flex;
          align-items: center;
          justify-content: space-between; */
          display: none;
        }
      }
      pre {
        border-width: 9px;
        border-color: var(--color__fringy-flower);
        background-color: var(--color__fringy-flower);
        box-shadow: inset 15px 15px 15px #00000040;
        margin: 0;
        code {
          background: none;
          text-shadow: 0px 4px 4px rgba(0, 0, 0, .25);
          padding: 0 0 0 15px;
          font-size: 16px;
          line-height: 23px;
        }
      }
    }
  }
}

::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}
::-webkit-scrollbar-track {
  background: #f1f1f1;
}
::-webkit-scrollbar-thumb {
  background: #888;
}
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

